src/objects/Authorization__c.object
<CustomObject>
    <description>NOTES Authorizations are records from AVATAR for Persons Being Served showing their authorized units and services that can be performed by The MENTOR Network. This should be populated by an integration with AVATAR. Authorizations are master-detail to Service Assignments.</description>
    <fields>
        <fullName>Admission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admission</label>
        <referenceTo>Admission__c</referenceTo>
        <relationshipLabel>Authorizations</relationshipLabel>
        <relationshipName>Authorized_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auth_Given_Method__c</fullName>
        <label>How Given</label>
        <picklist>
            <picklistValues>
                <fullName>Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Auth Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorization_Status__c</fullName>
        <description>Facilitates tracking delivery of services immediately, before authorization process is complete, by providing a temporary status.</description>
        <label>Authorization Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Dollars__c</fullName>
        <description>=MAX_DOLLARS in AVATAR</description>
        <label>Authorized Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorized_Provider__c</fullName>
        <description>Name of the provider authorized by the payer to deliver the authorized service</description>
        <label>Authorized Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Cambridge Family &amp; Children&apos;s Service (CFCS)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorized_Visits__c</fullName>
        <description>=MAX_VISITS in AVATAR</description>
        <label>Authorized Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avatar_Episode_Number__c</fullName>
        <label>Avatar Episode Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avatar_Upload_ID__c</fullName>
        <externalId>true</externalId>
        <label>Avatar Upload ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Used__c</fullName>
        <description>CM contract</description>
        <formula>Funding_Source__r.CM_Contract_Used_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Used</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Rollup__c</fullName>
        <label>Date of Last Rollup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>Used in Apex and VisualForce for item like Drop-downs menus.  Allows central management.</description>
        <formula>Name &amp;
&apos; - &apos; &amp;
TEXT(MONTH(Payer_Effective_Date__c))  &amp; &apos;/&apos; &amp;
TEXT(DAY(Payer_Effective_Date__c))  &amp;  &apos;/&apos; &amp;
TEXT(YEAR(Payer_Effective_Date__c))  &amp;
&apos; - &apos; &amp;
TEXT(MONTH(Payer_End_Date__c))  &amp; &apos;/&apos; &amp;
TEXT(DAY(Payer_End_Date__c))  &amp;  &apos;/&apos; &amp;
TEXT(YEAR(Payer_End_Date__c))  &amp;
&apos; - &apos; &amp;
&apos; ($ &apos; &amp;
 TEXT(Remaining_Dollars__c) &amp;
&apos; ) &apos; &amp;
&apos; (U  &apos; &amp;
 TEXT( Remaining_Units__c ) &amp;
&apos; ) &apos; &amp;
&apos; ( V &apos; &amp;
 TEXT( Remaining_Visits__c ) &amp;
&apos; ) &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Esigned_At__c</fullName>
        <label>Esigned At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Esigned_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Esigned By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to funding source - optional</description>
        <label>Funding Source</label>
        <referenceTo>Funding_Source__c</referenceTo>
        <relationshipLabel>Authorizations</relationshipLabel>
        <relationshipName>Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <description>justification for contract rate and level</description>
        <label>Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Confirmed__c</fullName>
        <label>Did CM confirm level?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>contract level used for auth</description>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Authorized_Units__c</fullName>
        <description>Total number of units allocated for the specific authorized service beginning on the effective date</description>
        <label>Number Of Authorized Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Authorization_Type__c</fullName>
        <label>Other Authorization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Authorization_Date__c</fullName>
        <description>Date the payer authorized the service, not to be confused with the date effective date.</description>
        <label>Payer Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payer_Authorization_ID__c</fullName>
        <description>ID uniquely identifying an authorized service in the payer&apos;s system.</description>
        <label>Payer Authorization ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_CM_Email__c</fullName>
        <description>Payer case manager email</description>
        <label>Payer CM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payer_CM_Fax__c</fullName>
        <description>Payer case manager fax</description>
        <label>Payer CM Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Payer_CM_Name__c</fullName>
        <description>Payer case manager name</description>
        <label>Payer CM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_CM_Phone__c</fullName>
        <description>Payer case manager phone</description>
        <label>Payer CM Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Payer_Effective_Date__c</fullName>
        <description>Date the authorization is effective according to the payer</description>
        <label>Payer Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payer_End_Date__c</fullName>
        <description>=AUTH_END_DATE in Avatar</description>
        <label>Payer End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payer_Name_FS__c</fullName>
        <description>payer name coming from funding source</description>
        <formula>Funding_Source__r.Payer_Name__c</formula>
        <label>Payer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Name__c</fullName>
        <description>Name of payer authorizing the service</description>
        <label>Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Being_Served__c</fullName>
        <label>Person Being Served</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Authorizations</relationshipLabel>
        <relationshipName>Authorized_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>contract rate for auth</description>
        <label>Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_unit__c</fullName>
        <label>Per</label>
        <picklist>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_New_Authorization__c</fullName>
        <label>Reason for New Authorization</label>
        <picklist>
            <picklistValues>
                <fullName>New Authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Payer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level/Rate Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error on Finalized Authorization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Received_Date_Time__c</fullName>
        <label>Received Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Received_From__c</fullName>
        <label>Given By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Dollars__c</fullName>
        <label>Remaining Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Units__c</fullName>
        <label>Remaining Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Visits__c</fullName>
        <label>Remaining Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Representing_Received__c</fullName>
        <label>Representing (Received)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Representing_Request__c</fullName>
        <label>Representing (Request)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Contact_Name__c</fullName>
        <label>Spoke With</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Fax__c</fullName>
        <label>Request Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Request_Phone__c</fullName>
        <label>Request Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <label>Review Nurse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Being_Funded_String__c</fullName>
        <label>Item/Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taken_By__c</fullName>
        <label>Taken By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Authorization Type</label>
        <picklist>
            <picklistValues>
                <fullName>1:1 Sitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed Holds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Cost Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Ended Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Ended Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stay - Open Ended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Authorization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Authorization ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authorizations</pluralLabel>
    <recordTypes>
        <fullName>External_Import</fullName>
        <active>true</active>
        <description>Records imported from external billing system (AVATAR)</description>
        <label>External Import</label>
    </recordTypes>
    <recordTypes>
        <fullName>Funding_Source_Auth_CM</fullName>
        <active>true</active>
        <description>Authorization related to funding source</description>
        <label>Funding Source Auth CM</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>